[metadata]
name = mongoengine-multilingual-field
version = 0.1
summary = MongoEngine field to store MultilingualString class from -18n-string project
download_url = UNKNOWN
home_page = https://github.com/lig/mongoengine-multilingual-field
author = Serge Matveenko
author_email = s@matveenko.ru
classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
requires-dist = i18n_string
    mongoengine

[files]
packages = multilingual_field
extra_files = COPYING
    setup.cfg
    setup.py
