[metadata]
name = mongoengine-multilingual-field
version = 0.1.2
summary = MongoEngine field to store MultilingualString class from -18n-string project
home_page = https://github.com/lig/mongoengine-multilingual-field
author = Serge Matveenko
author-email = s@matveenko.ru
classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
requires-dist = i18n_string (>=0.2.1)
    mongoengine

[files]
packages = multilingual_field
extra_files = COPYING
    setup.cfg
    setup.py
